Project page and source code links are added to README

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 purestg2 - Stargazer authentication module for linux PPP daemon.
 
+Project page: http://code.google.com/p/purestg2
+Source code: https://github.com/lion-simba/purestg2
 
 ==== OVERVIEW ====
 purestg2 comes as two plugins - one for Stargazer billing system
