--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+commit bfb3c79
+Author: Alexey Osipov <lion-simba@pridelands.ru>
+Date:   2011-02-15
+
+    Project page and source code links are added to README
+
+README
+
+commit e40b754
+Author: Alexey Osipov <lion-simba@pridelands.ru>
+Date:   2011-02-15
+
+    ChangeLog updated.
+
+ChangeLog
+
 commit 5b615f1
 Author: Alexey Osipov <lion-simba@pridelands.ru>
 Date:   2011-02-15
