--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
+New in 2.1:
+* New Stargazer plugin configuration option: ipparamsave.
+  Check README for details.
+
 New in 2.0:
 * Initial release.
