--- a/README
+++ b/README
@@ -84,6 +84,7 @@ using this plugin:
         ipparamsave = 4                         #integer from 0 to 9, must not equal to ipparamauth, optional, no default.
         ipparamauth = 2                         #integer from 0 to 9, must not equal to ipparamsave, optional, no default.
         allowemptyipparam                       #boolean, optional, require 'ipparamauth' option.
+        kickprevious                            #boolean, optional.
     </Module>
 ------------>|-------------------------------
     'authsocket' is UNIX domain socket address.
@@ -102,6 +103,11 @@ is empty, then check doesn't happen and authentication will
 succeed if user password is correct. If no ipparam was
 got from pppd, then authenticate will fail unless
 'allowemptyipparam' option is set.
+    By default, purestg2 forbid new connections with the
+same login if user already connected. But if 'kickprevious'
+option is set, then in case of new connection attempt with
+the same login, the old connection will be terminated and 
+the new connection will succeed.
 
 Here is an example chunk of pppd options file for using 
 this plugin:
