--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 New in 2.1:
 * New Stargazer plugin configuration options: 'ipparamsave',
-  'ipparamauth', 'allowemptyipparam'. Check README for details.
+  'ipparamauth', 'allowemptyipparam', 'kickprevious'.
+  Check README for details.
+* Graceful pppd shutdown, when Stargazer exits.
 
 New in 2.0:
 * Initial release.
