--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 New in 2.4:
-* New Stargazer plugin configuration option: 'allownotinetable'.
+* New Stargazer plugin configuration option: 'allownotinetable',
+  'callingnumbersave', 'callingnumberauth',
+  'allowemptycallingnumber'.
   See README for details.
+* Race condition fixed resulting in set ppp unit number lower
+  than 'minppp' option value.
 
 New in 2.3:
 * Support and require Stargazer 2.408.
