Project page updated

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 purestg2 - Stargazer authentication module for linux PPP daemon.
 
-Project page: http://code.google.com/p/purestg2
+Project page: http://lion-simba.github.io/purestg2
 Source code: https://github.com/lion-simba/purestg2
 
 ==== OVERVIEW ====
